[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mystocks"
version = "2.0.0"
description = "MyStocks - 量化交易系统"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "MyStocks Team"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pandas>=2.0.0,<3.0.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "redis>=5.0.0",
    "celery>=5.3.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "aiofiles>=23.0.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<8.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    "pytest-mock>=3.12.0,<4.0.0",
    "pytest-xdist>=3.3.0,<4.0.0",
    "pytest-benchmark>=4.0.0,<5.0.0",
    "playwright>=1.40.0",
    "black>=23.9.0,<24.0.0",
    "isort>=5.12.0,<6.0.0",
    "flake8>=6.1.0,<7.0.0",
    "mypy>=1.6.0,<2.0.0",
    "pylint>=3.0.0,<4.0.0",
    "pre-commit>=3.5.0,<4.0.0",
    "bandit>=1.7.5,<2.0.0",
    "safety>=2.3.0,<3.0.0",
]
database = [
    "psycopg2-binary>=2.9.7",
    "taospy>=3.0.0",
    "pymongo>=4.6.0",
]
gpu = [
    "torch>=2.1.0",
    "tensorflow>=2.15.0",
    "nvidia-ml-py3>=12.535.108",
    "cupy-cuda11x>=12.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocstrings[python]>=0.23.0",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=80",
    "--benchmark-only",
    "--benchmark-sort=mean",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "gpu: marks tests that require GPU",
    "database: marks tests that require database",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/backup_*",
    "*/archive/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | archive
  | backup
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120
known_first_party = ["src", "app"]
known_third_party = ["fastapi", "pydantic", "pandas", "numpy", "requests", "sqlalchemy"]

# ============================================================================
# Ruff Configuration (日常开发 - 效率优先)
# ============================================================================
[tool.ruff]
# 统一行长度为 120，与 Black 保持一致
line-length = 120

# 目标 Python 版本
target-version = "py39"

# 扫描的文件目录
include = ["*.py", "*.pyi"]

# 排除目录（与 .gitignore 和其他工具保持一致）
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*_cache.py",
    ".eggs",
    "*.egg",
    "venv",
    "build",
    "dist",
    "temp",
    ".archive",
    "node_modules",
    "migrations",
]

# 每次运行时自动修复问题
fix = true

# ============================================================================
# Ruff 规则选择（测试场景优化）
# ============================================================================
[tool.ruff.lint]
# 启用的规则类别：
# - E, W: 基础语法错误和警告（直接影响测试执行）
# - F: Pyflakes 代码错误检测（未定义变量、未用导入等）
# - IND: 缩进错误检查
# - PT: pytest 专属规则（测试函数无断言、未用 fixture 等）
# - I: 导入排序（与 isort 功能重叠，但 Ruff 更快）
select = [
    "E",   # pycodestyle errors (基础错误)
    "W",   # pycodestyle warnings (基础警告)
    "F",   # pyflakes (代码错误)
    "PT",  # pytest-specific rules (pytest 专属规则)
    "I",   # isort (导入排序，替代 isort 工具)
]

# 排除的规则（与 Black 和其他工具避免冲突）
ignore = [
    # 与 Black 冲突的格式化规则
    "E501",   # line-too-long (由 Black 处理)
    "I001",   # isort conflict (由 Ruff 自己处理)

    # 测试代码中常见的合理例外
    "PT011",  # pytest.raises Too broad (测试中有时需要)
    "PT012",  # pytest.raises() does not match exception type (合理)
    "PT015",  # pytest fixture always returns same value (测试固件可以如此)
    "S101",   # Use of assert detected (测试代码中 assert 是必须的)

    # 已被其他工具处理的规则
    "C901",   # too-complex (由 Pylint 处理)

    # 模块导入顺序豁免（sys.path修改后的导入）
    "E402",   # module level import not at top of file
]

# 允许自动修复的规则
fixable = ["ALL"]

# 每个文件允许的未使用导入数量（测试代码可能需要）
unfixable = []

# ============================================================================
# Ruff Pytest 配置
# ============================================================================
[tool.ruff.lint.per-file-ignores]
# 测试文件的特殊规则豁免
"tests/**/*.py" = [
    "S101",    # assert 是测试的核心
    "ARG001",  # 未使用的参数在测试 fixture 中很常见
    "ARG002",  # 未使用的参数在测试 fixture 中很常见
]

# ============================================================================
# Ruff 格式化配置
# ============================================================================
[tool.ruff.format]
# 使用双引号
quote-style = "double"

# 缩进风格
indent-style = "space"

# 跳过魔术尾随逗号的格式化（与 Black 保持一致）
skip-magic-trailing-comma = false

# 行结束符
line-ending = "auto"

# ============================================================================
# Ruff 导入排序配置
# ============================================================================
[tool.ruff.lint.isort]
known-first-party = ["src", "app"]
known-third-party = ["fastapi", "pydantic", "pandas", "numpy", "requests", "sqlalchemy"]
force-single-line = false
lines-after-imports = 2

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "taos.*",
    "taosws.*",
    "pynvml.*",
    "sklearn.*",
    "pymongo.*",
]
ignore_missing_imports = true

# ============================================================================
# Pylint Configuration (定期深度质量分析 - 核心价值)
# ============================================================================
[tool.pylint.main]
# 并行作业数
jobs = 4

# 忽略的模块（C 扩展动态成员）
extension-pkg-whitelist = ["talib", "baostock", "efinance", "cupy", "cudf", "cuml", "taospy"]

# 忽略的路径
ignore = ["temp", "__pycache__", ".git", "venv", "node_modules", ".archive"]

[tool.pylint.messages_control]
# 常规代码检查：启用所有规则，排除冗余警告
enable = ["all"]
disable = [
    "missing-docstring",         # 文档字符串（可选择性添加）
    "too-many-lines",            # 文件行数（由架构设计决定）
    "too-many-instance-attributes",  # 实例属性数（合理的设计决策）
    "too-many-arguments",        # 参数数量（合理的设计决策）
    "too-many-locals",           # 局部变量数（合理的设计决策）
    "too-many-branches",         # 分支数（合理的设计决策）
    "too-many-statements",       # 语句数（合理的设计决策）
    "duplicate-code",            # 代码重复（有时合理）
    "line-too-long",             # 行长度（由 Black 处理）
]

[tool.pylint.format]
# 统一行长度为 120，与 Black/Ruff 保持一致
max-line-length = 120

[tool.pylint.design]
# 设计复杂度阈值（常规代码）
max-args = 10
max-locals = 20
max-returns = 10
max-branches = 15
max-statements = 50

[tool.pylint.typecheck]
# 生成成员的模块（动态属性）
generated-members = ["talib.*", "baostock.*", "efinance.*", "cupy.*", "cudf.*", "cuml.*"]

# ============================================================================
# Pylint 测试专用配置（每周/每迭代末深度分析）
# ============================================================================
[tool.pylint.tests]
# 继承主配置
# 命令行使用: pylint --rcfile=<测试配置> tests/

# 测试代码聚焦：只关注测试核心问题
[tool.pylint.tests_messages_control]
# 禁用所有规则，然后启用测试相关的核心规则
disable = ["all"]
enable = [
    # 基础语法错误（兜底检查）
    "bad-indentation",           # 缩进错误
    "E0602",                     # 未定义变量
    "E0601",                     # 使用前未赋值变量

    # 测试代码质量问题
    "W0611",                     # 未用导入
    "R0914",                     # 函数变量过多（测试用例复杂度过高）
    "R0903",                     # 测试类方法过少（冗余类）

    # pytest 专属规则（需要 pylint-pytest 插件）
    "PT001",                     # pytest fixture 应该使用 @pytest.fixture
    "PT002",                     # pytest fixture 参数化错误
    "PT003",                     # pytest 测试函数命名不规范
    "PT004",                     # pytest fixture 未使用
    "PT005",                     # pytest 测试函数没有返回值（应使用断言）
    "PT006",                     # pytest 参数化参数名错误
    "PT007",                     # pytest 参数化参数顺序错误
    "PT011",                     # pytest.raises() 过于宽泛
    "PT012",                     # pytest.raises() 与异常类型不匹配
    "PT017",                     # pytest 断言在迭代中（应该使用 pytest.raises）
    "PT018",                     # pytest 断言应该使用特定方法
    "PT019",                     # pytest fixture 未使用
    "PT020",                     # pytest 测试函数有返回值（应使用断言）
    "PT021",                     # pytest 测试函数 yield fixture
    "PT022",                     # pytest 未使用 yield fixture
    "PT023",                     # pytest 测试类应该以 Test 开头
    "PT024",                     # pytest 测试类不应包含 __init__ 方法
    "PT025",                     # pytest 测试类不应包含 setUp/tearDown（应使用 fixture）

    # 代码质量警告
    "W0612",                     # 测试中的未使用变量
    "W0613",                     # 测试中的未使用参数（fixture 参数除外）
    "R0913",                     # 测试函数参数过多（复杂度过高）
    "R0915",                     # 测试函数语句过多（应该拆分）
    "C0304",                     # 缺失尾随换行符
    "C0305",                     # 尾随空格
    "C0321",                     # 多个语句在一行
    "C0324",                     # 括号后多余空格
    "C0330",                     # 错误的缩进
    "W0101",                     # 无法到达的代码
    "W0102",                     # 冗余的返回语句
    "W0105",                     # 无意义的字符串语句
    "W0106",                     # 未使用的表达式
    "W0107",                     # 未使用的比较
    "W0108",                     # Lambda 表达式可以直接替换
    "W0109",                     # 重复的键
    "W0120",                     # else 块后紧跟 return
    "W0121",                     # 重复的比较
    "W0122",                     # 重复的条件
    "W0123",                     # 比较字面量
    "W0124",                     # 冗余的括号
    "W0125",                     # 冗余的转义字符
    "W0126",                     # 冗余的比较
    "W0127",                     # 重复的键
    "W0128",                     # 重复的 return 语句
    "W0129",                     # assert 语句的条件永远为 True
    "W0130",                     # 重复的键
    "W0131",                     # 未使用的命名常量
    "W0132",                     # 重复的键
    "W0133",                     # 重复的表达式
    "W0135",                     # 重复的键
    "W0136",                     # 未使用的表达式
    "W0141",                     # 未使用的位运算符
    "W0142",                     # 未使用的比较
    "W0143",                     # 未使用的比较
    "W0144",                     # 未使用的比较
    "W0145",                     # 未使用的比较
    "W0146",                     # 未使用的比较
    "W0150",                     # 未使用的比较
    "W0151",                     # 未使用的比较
    "W0155",                     # 未使用的比较
    "W0156",                     # 未使用的比较
    "W0157",                     # 未使用的比较
    "W0158",                     # 未使用的比较
    "W0159",                     # 未使用的比较
    "W0160",                     # 未使用的比较
    "W0161",                     # 未使用的比较
    "W0162",                     # 未使用的比较
    "W0163",                     # 未使用的比较
    "W0164",                     # 未使用的比较
    "W0165",                     # 未使用的比较
    "W0166",                     # 未使用的比较
    "W0167",                     # 未使用的比较
    "W0168",                     # 未使用的比较
    "W0169",                     # 未使用的比较
    "W0170",                     # 未使用的比较
    "W0171",                     # 未使用的比较
    "W0172",                     # 未使用的比较
    "W0173",                     # 未使用的比较
    "W0174",                     # 未使用的比较
    "W0175",                     # 未使用的比较
    "W0176",                     # 未使用的比较
    "W0177",                     # 未使用的比较
    "W0178",                     # 未使用的比较
    "W0179",                     # 未使用的比较
    "W0180",                     # 未使用的比较
    "W0199",                     # 断言总是为 True
    "W0201",                     # 属性定义在方法外
    "W0211",                     # 访问受保护成员
    "W0212",                     # 访问私有成员
    "W0221",                     # 参数数量不匹配
    "W0222",                     # 签名不同
    "W0231",                     # __init__ 方法没有调用父类
    "W0232",                     # 类没有 __init__ 方法
    "W0233",                     # __init__ 方法没有调用父类
    "W0235",                     # 使用过时的语法
    "W0301",                     # 不必要的分号
    "W0311",                     # 缩进错误
    "W0312",                     # 缩进错误
    "W0401",                     # 通配符导入
    "W0402",                     # 过时的模块
    "W0404",                     # 重新导入模块
    "W0410",                     # 通配符导入
    "W0601",                     # 全局变量
    "W0602",                     # 全局变量未使用
    "W0603",                     # 全局变量过多
    "W0604",                     # 全局变量在函数内
    "W0611",                     # 未使用的导入
    "W0612",                     # 未使用的变量
    "W0613",                     # 未使用的参数
    "W0622",                     # 重新定义内置函数
    "W0623",                     # 重新定义内置函数
    "W0624",                     # 重新定义内置函数
    "W0631",                     # 循环变量未定义
    "W0632",                     # 未使用的循环变量
    "W0640",                     # 未使用的循环变量
    "W0641",                     # 未使用的循环变量
    "W0642",                     # 未使用的循环变量
    "W0702",                     # 使用裸 except
    "W0703",                     # 捕获太宽泛的异常
    "W0705",                     # 多个 except 子句相同
    "W0711",                     # 捕获异常但未使用
    "W0715",                     # 异常参数未使用
    "W0716",                     # 捕获异常但未使用
    "W0717",                     # 捕获异常但未使用
    "W0718",                     # 捕获异常但未使用
    "W0719",                     # 捕获太宽泛的异常
    "W1201",                     # 使用字符串作为异常
    "W1202",                     # 使用 % 格式化日志
    "W1203",                     # 使用 % 格式化日志
    "W1300",                     # 格式化字符串缺少参数
    "W1301",                     # 格式化字符串缺少参数
    "W1302",                     # 格式化字符串缺少参数
    "W1303",                     # 格式化字符串缺少参数
    "W1304",                     # 格式化字符串缺少参数
    "W1305",                     # 格式化字符串缺少参数
    "W1306",                     # 格式化字符串缺少参数
    "W1307",                     # 格式化字符串缺少参数
    "W1308",                     # 格式化字符串缺少参数
    "W1309",                     # 格式化字符串缺少参数
    "W1310",                     # 格式化字符串缺少参数
    "W1401",                     # 格式化字符串缺少参数
    "W1402",                     # 格式化字符串缺少参数
    "W1404",                     # 格式化字符串缺少参数
    "W1405",                     # 格式化字符串缺少参数
    "W1406",                     # 格式化字符串缺少参数
    "W1407",                     # 格式化字符串缺少参数
    "W1408",                     # 格式化字符串缺少参数
    "W1409",                     # 格式化字符串缺少参数
    "W1410",                     # 格式化字符串缺少参数
    "W1411",                     # 格式化字符串缺少参数
    "W1412",                     # 格式化字符串缺少参数
    "W1501",                     # 使用不建议的方法
    "W1502",                     # 使用不建议的方法
    "W1503",                     # 使用不建议的方法
    "W1504",                     # 使用不建议的方法
    "W1505",                     # 使用不建议的方法
    "W1506",                     # 使用不建议的方法
    "W1507",                     # 使用不建议的方法
    "W1508",                     # 使用不建议的方法
    "W1509",                     # 使用不建议的方法
    "W1510",                     # 使用不建议的方法
    "W1511",                     # 使用不建议的方法
    "W1512",                     # 使用不建议的方法
    "W1513",                     # 使用不建议的方法
    "W1514",                     # 使用不建议的方法
    "W1515",                     # 使用不建议的方法
    "W1516",                     # 使用不建议的方法
    "W1517",                     # 使用不建议-method
    "W1518",                     # 使用不建议的方法
    "W1519",                     # 使用不建议的方法
    "W1520",                     # 使用不建议的方法
    "W1521",                     # 使用不建议的方法
    "W1522",                     # 使用不建议的方法
    "W1523",                     # 使用不建议的方法
    "W1524",                     # 使用不建议的方法
    "W1525",                     # 使用不建议的方法
    "W1526",                     # 使用不建议的方法
    "W1527",                     # 使用不建议的方法
    "W1528",                     # 使用不建议的方法
    "W1529",                     # 使用不建议的方法
    "W1530",                     # 使用不建议的方法
    "W1531",                     # 使用不建议的方法
    "W1532",                     # 使用不建议的方法
    "W1533",                     # 使用不建议的方法
    "W1534",                     # 使用不建议的方法
    "W1535",                     # 使用不建议的方法
    "W1536",                     # 使用不建议的方法
    "W1537",                     # 使用不建议的方法
    "W1538",                     # 使用不建议的方法
    "W1539",                     # 使用不建议的方法
    "W1540",                     # 使用不建议的方法
    "W1541",                     # 使用不建议的方法
    "W1542",                     # 使用不建议的方法
    "W1543",                     # 使用不建议的方法
    "W1544",                     # 使用不建议的方法
    "W1545",                     # 使用不建议的方法
    "W1546",                     # 使用不建议的方法
    "W1547",                     # 使用不建议的方法
    "W1548",                     # 使用不建议的方法
    "W1549",                     # 使用不建议的方法
    "W1550",                     # 使用不建议的方法
    "W1551",                     # 使用不建议的方法
    "W1552",                     # 使用不建议的方法
    "W1553",                     # 使用不建议的方法
    "W1554",                     # 使用不建议的方法
    "W1555",                     # 使用不建议的方法
    "W1556",                     # 使用不建议的方法
    "W1557",                     # 使用不建议的方法
    "W1558",                     # 使用不建议的方法
    "W1559",                     # 使用不建议的方法
    "W1560",                     # 使用不建议的方法
    "W1561",                     # 使用不建议的方法
    "W1562",                     # 使用不建议的方法
    "W1563",                     # 使用不建议的方法
    "W1564",                     # 使用不建议的方法
    "W1565",                     # 使用不建议的方法
    "W1566",                     # 使用不建议的方法
    "W1567",                     # 使用不建议的方法
    "W1568",                     # 使用不建议的方法
    "W1569",                     # 使用不建议的方法
    "W1570",                     # 使用不建议的方法
    "W1571",                     # 使用不建议的方法
    "W1572",                     # 使用不建议的方法
    "W1573",                     # 使用不建议的方法
    "W1574",                     # 使用不建议的方法
    "W1575",                     # 使用不建议的方法
    "W1576",                     # 使用不建议的方法
    "W1577",                     # 使用不建议的方法
    "W1578",                     # 使用不建议的方法
    "W1579",                     # 使用不建议的方法
    "W1580",                     # 使用不建议的方法
    "W1581",                     # 使用不建议的方法
    "W1582",                     # 使用不建议的方法
    "W1583",                     # 使用不建议的方法
    "W1584",                     # 使用不建议的方法
    "W1585",                     # 使用不建议的方法
    "W1586",                     # 使用不建议的方法
    "W1587",                     # 使用不建议的方法
    "W1588",                     # 使用不建议的方法
    "W1589",                     # 使用不建议的方法
    "W1590",                     # 使用不建议的方法
    "W1591",                     # 使用不建议的方法
    "W1592",                     # 使用不建议的方法
    "W1593",                     # 使用不建议的方法
    "W1594",                     # 使用不建议的方法
    "W1595",                     # 使用不建议的方法
    "W1596",                     # 使用不建议的方法
    "W1597",                     # 使用不建议的方法
    "W1598",                     # 使用不建议的方法
    "W1599",                     # 使用不建议的方法
    "W1600",                     # 使用不建议的方法
    "W1601",                     # 使用不建议的方法
    "W1602",                     # 使用不建议的方法
    "W1603",                     # 使用不建议的方法
    "W1604",                     # 使用不建议的方法
    "W1605",                     # 使用不建议的方法
    "W1606",                     # 使用不建议的方法
    "W1607",                     # 使用不建议的方法
    "W1608",                     # 使用不建议的方法
    "W1609",                     # 使用不建议的方法
    "W1610",                     # 使用不建议的方法
    "W1611",                     # 使用不建议的方法
    "W1612",                     # 使用不建议的方法
    "W1613",                     # 使用不建议的方法
    "W1614",                     # 使用不建议的方法
    "W1615",                     # 使用不建议的方法
    "W1616",                     # 使用不建议的方法
    "W1617",                     # 使用不建议的方法
    "W1618",                     # 使用不建议的方法
    "W1619",                     # 使用不建议的方法
    "W1620",                     # 使用不建议的方法
    "W1621",                     # 使用不建议的方法
    "W1622",                     # 使用不建议的方法
    "W1623",                     # 使用不建议的方法
    "W1624",                     # 使用不建议的方法
    "W1625",                     # 使用不建议的方法
    "W1626",                     # 使用不建议的方法
    "W1627",                     # 使用不建议的方法
    "W1628",                     # 使用不建议的方法
    "W1629",                     # 使用不建议的方法
    "W1630",                     # 使用不建议的方法
    "W1631",                     # 使用不建议的方法
    "W1632",                     # 使用不建议的方法
    "W1633",                     # 使用不建议的方法
    "W1634",                     # 使用不建议的方法
    "W1635",                     # 使用不建议的方法
    "W1636",                     # 使用不建议的方法
    "W1637",                     # 使用不建议的方法
    "W1638",                     # 使用不建议的方法
    "W1639",                     # 使用不建议的方法
    "W1640",                     # 使用不建议的方法
    "W1641",                     # 使用不建议的方法
    "W1642",                     # 使用不建议的方法
    "W1643",                     # 使用不建议的方法
    "W1644",                     # 使用不建议的方法
    "W1645",                     # 使用不建议的方法
    "W1646",                     # 使用不建议的方法
    "W1647",                     # 使用不建议的方法
    "W1648",                     # 使用不建议的方法
    "W1649",                     # 使用不建议的方法
    "W1650",                     # 使用不建议的方法
    "W1651",                     # 使用不建议的方法
    "W1652",                     # 使用不建议的方法
    "W1653",                     # 使用不建议的方法
    "W1654",                     # 使用不建议的方法
    "W1655",                     # 使用不建议的方法
    "W1656",                     # 使用不建议的方法
    "W1657",                     # 使用不建议的方法
    "W1658",                     # 使用不建议的方法
    "W1659",                     # 使用不建议的方法
    "W1660",                     # 使用不建议的方法
    "W1661",                     # 使用不建议的方法
    "W1662",                     # 使用不建议的方法
    "W1663",                     # 使用不建议的方法
    "W1664",                     # 使用不建议的方法
    "W1665",                     # 使用不建议的方法
    "W1666",                     # 使用不建议的方法
    "W1667",                     # 使用不建议的方法
    "W1668",                     # 使用不建议的方法
    "W1669",                     # 使用不建议的方法
    "W1670",                     # 使用不建议的方法
    "W1671",                     # 使用不建议的方法
    "W1672",                     # 使用不建议的方法
    "W1673",                     # 使用不建议的方法
    "W1674",                     # 使用不建议的方法
    "W1675",                     # 使用不建议的方法
    "W1676",                     # 使用不建议的方法
    "W1677",                     # 使用不建议的方法
    "W1678",                     # 使用不建议的方法
    "W1679",                     # 使用不建议的方法
    "W1680",                     # 使用不建议的方法
    "W1681",                     # 使用不建议的方法
    "W1682",                     # 使用不建议的方法
    "W1683",                     # 使用不建议的方法
    "W1684",                     # 使用不建议的方法
    "W1685",                     # 使用不建议的方法
    "W1686",                     # 使用不建议的方法
    "W1687",                     # 使用不建议的方法
    "W1688",                     # 使用不建议的方法
    "W1689",                     # 使用不建议的方法
    "W1690",                     # 使用不建议的方法
    "W1691",                     # 使用不建议的方法
    "W1692",                     # 使用不建议的方法
    "W1693",                     # 使用不建议的方法
    "W1694",                     # 使用不建议的方法
    "W1695",                     # 使用不建议的方法
    "W1696",                     # 使用不建议的方法
    "W1697",                     # 使用不建议的方法
    "W1698",                     # 使用不建议的方法
    "W1699",                     # 使用不建议的方法
    "W1700",                     # 使用不建议的方法
    "W1701",                     # 使用不建议的方法
    "W1702",                     # 使用不建议的方法
    "W1703",                     # 使用不建议的方法
    "W1704",                     # 使用不建议的方法
    "W1705",                     # 使用不建议的方法
    "W1706",                     # 使用不建议的方法
    "W1707",                     # 使用不建议的方法
    "W1708",                     # 使用不建议的方法
    "W1709",                     # 使用不建议的方法
    "W1710",                     # 使用不建议的方法
    "W1711",                     # 使用不建议的方法
    "W1712",                     # 使用不建议的方法
    "W1713",                     # 使用不建议的方法
    "W1714",                     # 使用不建议的方法
    "W1715",                     # 使用不建议的方法
    "W1716",                     # 使用不建议的方法
    "W1717",                     # 使用不建议的方法
    "W1718",                     # 使用不建议的方法
    "W1719",                     # 使用不建议的方法
    "W1720",                     # 使用不建议的方法
    "W1721",                     # 使用不建议的方法
    "W1722",                     # 使用不建议的方法
    "W1723",                     # 使用不建议的方法
    "W1724",                     # 使用不建议的方法
    "W1725",                     # 使用不建议的方法
    "W1726",                     # 使用不建议的方法
    "W1727",                     # 使用不建议的方法
    "W1728",                     # 使用不建议的方法
    "W1729",                     # 使用不建议的方法
    "W1730",                     # 使用不建议的方法
    "W1731",                     # 使用不建议的方法
    "W1732",                     # 使用不建议的方法
    "W1733",                     # 使用不建议的方法
    "W1734",                     # 使用不建议的方法
    "W1735",                     # 使用不建议的方法
    "W1736",                     # 使用不建议的方法
    "W1737",                     # 使用不建议的方法
    "W1738",                     # 使用不建议的方法
    "W1739",                     # 使用不建议的方法
    "W1740",                     # 使用不建议的方法
    "W1741",                     # 使用不建议的方法
    "W1742",                     # 使用不建议的方法
    "W1743",                     # 使用不建议的方法
    "W1744",                     # 使用不建议的方法
    "W1745",                     # 使用不建议的方法
    "W1746",                     # 使用不建议的方法
    "W1747",                     # 使用不建议的方法
    "W1748",                     # 使用不建议的方法
    "W1749",                     # 使用不建议的方法
    "W1750",                     # 使用不建议的方法
    "W1751",                     # 使用不建议的方法
    "W1752",                     # 使用不建议的方法
    "W1753",                     # 使用不建议的方法
    "W1754",                     # 使用不建议的方法
    "W1755",                     # 使用不建议的方法
    "W1756",                     # 使用不建议的方法
    "W1757",                     # 使用不建议的方法
    "W1758",                     # 使用不建议的方法
    "W1759",                     # 使用不建议的方法
    "W1760",                     # 使用不建议的方法
    "W1761",                     # 使用不建议的方法
    "W1762",                     # 使用不建议的方法
    "W1763",                     # 使用不建议的方法
    "W1764",                     # 使用不建议的方法
    "W1765",                     # 使用不建议的方法
    "W1766",                     # 使用不建议的方法
    "W1767",                     # 使用不建议的方法
    "W1768",                     # 使用不建议的方法
    "W1769",                     # 使用不建议的方法
    "W1770",                     # 使用不建议的方法
    "W1771",                     # 使用不建议的方法
    "W1772",                     # 使用不建议的方法
    "W1773",                     # 使用不建议的方法
    "W1774",                     # 使用不建议的方法
    "W1775",                     # 使用不建议的方法
    "W1776",                     # 使用不建议的方法
    "W1777",                     # 使用不建议的方法
    "W1778",                     # 使用不建议的方法
    "W1779",                     # 使用不建议的方法
    "W1780",                     # 使用不建议的方法
    "W1781",                     # 使用不建议的方法
    "W1782",                     # 使用不建议的方法
    "W1783",                     # 使用不建议的方法
    "W1784",                     # 使用不建议的方法
    "W1785",                     # 使用不建议的方法
    "W1786",                     # 使用不建议的方法
    "W1787",                     # 使用不建议的方法
    "W1788",                     # 使用不建议的方法
    "W1789",                     # 使用不建议的方法
    "W1790",                     # 使用不建议的方法
    "W1791",                     # 使用不建议的方法
    "W1792",                     # 使用不建议的方法
    "W1793",                     # 使用不建议的方法
    "W1794",                     # 使用不建议的方法
    "W1795",                     # 使用不建议的方法
    "W1796",                     # 使用不建议的方法
    "W1797",                     # 使用不建议的方法
    "W1798",                     # 使用不建议的方法
    "W1799",                     # 使用不建议的方法
    "W1800",                     # 使用不建议的方法
    "W1801",                     # 使用不建议的方法
    "W1802",                     # 使用不建议的方法
    "W1803",                     # 使用不建议的方法
    "W1804",                     # 使用不建议的方法
    "W1805",                     # 使用不建议的方法
    "W1806",                     # 使用不建议的方法
    "W1807",                     # 使用不建议的方法
    "W1808",                     # 使用不建议的方法
    "W1809",                     # 使用不建议的方法
    "W1810",                     # 使用不建议的方法
    "W1811",                     # 使用不建议的方法
    "W1812",                     # 使用不建议的方法
    "W1813",                     # 使用不建议的方法
    "W1814",                     # 使用不建议的方法
    "W1815",                     # 使用不建议的方法
    "W1816",                     # 使用不建议的方法
    "W1817",                     # 使用不建议的方法
    "W1818",                     # 使用不建议-method
    "W1819",                     # 使用不建议的方法
    "W1820",                     # 使用不建议的方法
    "W1821",                     # 使用不建议的方法
    "W1822",                     # 使用不建议的方法
    "W1823",                     # 使用不建议的方法
    "W1824",                     # 使用不建议的方法
    "W1825",                     # 使用不建议的方法
    "W1826",                     # 使用不建议的方法
    "W1827",                     # 使用不建议的方法
    "W1828",                     # 使用不建议的方法
    "W1829",                     # 使用不建议的方法
    "W1830",                     # 使用不建议的方法
    "W1831",                     # 使用不建议的方法
    "W1832",                     # 使用不建议的方法
    "W1833",                     # 使用不建议的方法
    "W1834",                     # 使用不建议的方法
    "W1835",                     # 使用不建议的方法
    "W1836",                     # 使用不建议的方法
    "W1837",                     # 使用不建议的方法
    "W1838",                     # 使用不建议的方法
    "W1839",                     # 使用不建议的方法
    "W1840",                     # 使用不建议的方法
    "W1841",                     # 使用不建议的方法
    "W1842",                     # 使用不建议的方法
    "W1843",                     # 使用不建议的方法
    "W1844",                     # 使用不建议的方法
    "W1845",                     # 使用不建议的方法
    "W1846",                     # 使用不建议的方法
    "W1847",                     # 使用不建议的方法
    "W1848",                     # 使用不建议的方法
    "W1849",                     # 使用不建议的方法
    "W1850",                     # 使用不建议的方法
    "W1851",                     # 使用不建议的方法
    "W1852",                     # 使用不建议的方法
    "W1853",                     # 使用不建议的方法
    "W1854",                     # 使用不建议的方法
    "W1855",                     # 使用不建议的方法
    "W1856",                     # 使用不建议的方法
    "W1857",                     # 使用不建议的方法
    "W1858",                     # 使用不建议的方法
    "W1859",                     # 使用不建议的方法
    "W1860",                     # 使用不建议的方法
    "W1861",                     # 使用不建议的方法
    "W1862",                     # 使用不建议的方法
    "W1863",                     # 使用不建议的方法
    "W1864",                     # 使用不建议的方法
    "W1865",                     # 使用不建议的方法
    "W1866",                     # 使用不建议的方法
    "W1867",                     # 使用不建议的方法
    "W1868",                     # 使用不建议的方法
    "W1869",                     # 使用不建议的方法
    "W1870",                     # 使用不建议的方法
    "W1871",                     # 使用不建议的方法
    "W1872",                     # 使用不建议的方法
    "W1873",                     # 使用不建议的方法
    "W1874",                     # 使用不建议的方法
    "W1875",                     # 使用不建议的方法
    "W1876",                     # 使用不建议的方法
    "W1877",                     # 使用不建议的方法
    "W1878",                     # 使用不建议的方法
    "W1879",                     # 使用不建议的方法
    "W1880",                     # 使用不建议的方法
    "W1881",                     # 使用不建议的方法
    "W1882",                     # 使用不建议的方法
    "W1883",                     # 使用不建议的方法
    "W1884",                     # 使用不建议的方法
    "W1885",                     # 使用不建议的方法
    "W1886",                     # 使用不建议的方法
    "W1887",                     # 使用不建议的方法
    "W1888",                     # 使用不建议的方法
    "W1889",                     # 使用不建议的方法
    "W1890",                     # 使用不建议的方法
    "W1891",                     # 使用不建议的方法
    "W1892",                     # 使用不建议的方法
    "W1893",                     # 使用不建议的方法
    "W1894",                     # 使用不建议的方法
    "W1895",                     # 使用不建议的方法
    "W1896",                     # 使用不建议的方法
    "W1897",                     # 使用不建议的方法
    "W1898",                     # 使用不建议的方法
    "W1899",                     # 使用不建议的方法
    "W1900",                     # 使用不建议的方法
    "W1901",                     # 使用不建议的方法
    "W1902",                     # 使用不建议的方法
    "W1903",                     # 使用不建议的方法
    "W1904",                     # 使用不建议的方法
    "W1905",                     # 使用不建议的方法
    "W1906",                     # 使用不建议的方法
    "W1907",                     # 使用不建议的方法
    "W1908",                     # 使用不建议的方法
    "W1909",                     # 使用不建议的方法
    "W1910",                     # 使用不建议的方法
    "W1911",                     # 使用不建议的方法
    "W1912",                     # 使用不建议的方法
    "W1913",                     # 使用不建议的方法
    "W1914",                     # 使用不建议的方法
    "W1915",                     # 使用不建议的方法
    "W1916",                     # 使用不建议的方法
    "W1917",                     # 使用不建议的方法
    "W1918",                     # 使用不建议的方法
    "W1919",                     # 使用不建议的方法
    "W1920",                     # 使用不建议的方法
    "W1921",                     # 使用不建议的方法
    "W1922",                     # 使用不建议的方法
    "W1923",                     # 使用不建议的方法
    "W1924",                     # 使用不建议的方法
    "W1925",                     # 使用不建议的方法
    "W1926",                     # 使用不建议的方法
    "W1927",                     # 使用不建议的方法
    "W1928",                     # 使用不建议的方法
    "W1929",                     # 使用不建议的方法
    "W1930",                     # 使用不建议的方法
    "W1931",                     # 使用不建议的方法
    "W1932",                     # 使用不建议的方法
    "W1933",                     # 使用不建议的方法
    "W1934",                     # 使用不建议的方法
    "W1935",                     # 使用不建议的方法
    "W1936",                     # 使用不建议的方法
    "W1937",                     # 使用不建议的方法
    "W1938",                     # 使用不建议的方法
    "W1939",                     # 使用不建议的方法
    "W1940",                     # 使用不建议的方法
    "W1941",                     # 使用不建议的方法
    "W1942",                     # 使用不建议的方法
    "W1943",                     # 使用不建议的方法
    "W1944",                     # 使用不建议的方法
    "W1945",                     # 使用不建议的方法
    "W1946",                     # 使用不建议的方法
    "W1947",                     # 使用不建议的方法
    "W1948",                     # 使用不建议的方法
    "W1949",                     # 使用不建议的方法
    "W1950",                     # 使用不建议的方法
    "W1951",                     # 使用不建议的方法
    "W1952",                     # 使用不建议的方法
    "W1953",                     # 使用不建议的方法
    "W1954",                     # 使用不建议的方法
    "W1955",                     # 使用不建议的方法
    "W1956",                     # 使用不建议的方法
    "W1957",                     # 使用不建议的方法
    "W1958",                     # 使用不建议的方法
    "W1959",                     # 使用不建议的方法
    "W1960",                     # 使用不建议的方法
    "W1961",                     # 使用不建议的方法
    "W1962",                     # 使用不建议的方法
    "W1963",                     # 使用不建议的方法
    "W1964",                     # 使用不建议的方法
    "W1965",                     # 使用不建议的方法
    "W1966",                     # 使用不建议的方法
    "W1967",                     # 使用不建议的方法
    "W1968",                     # 使用不建议的方法
    "W1969",                     # 使用不建议的方法
    "W1970",                     # 使用不建议的方法
    "W1971",                     # 使用不建议的方法
    "W1972",                     # 使用不建议的方法
    "W1973",                     # 使用不建议的方法
    "W1974",                     # 使用不建议的方法
    "W1975",                     # 使用不建议的方法
    "W1976",                     # 使用不建议的方法
    "W1977",                     # 使用不建议的方法
    "W1978",                     # 使用不建议的方法
    "W1979",                     # 使用不建议的方法
    "W1980",                     # 使用不建议的方法
    "W1981",                     # 使用不建议的方法
    "W1982",                     # 使用不建议的方法
    "W1983",                     # 使用不建议的方法
    "W1984",                     # 使用不建议的方法
    "W1985",                     # 使用不建议的方法
    "W1986",                     # 使用不建议的方法
    "W1987",                     # 使用不建议的方法
    "W1988",                     # 使用不建议的方法
    "W1989",                     # 使用不建议的方法
    "W1990",                     # 使用不建议的方法
    "W1991",                     # 使用不建议的方法
    "W1992",                     # 使用不建议的方法
    "W1993",                     # 使用不建议的方法
    "W1994",                     # 使用不建议的方法
    "W1995",                     # 使用不建议的方法
    "W1996",                     # 使用不建议的方法
    "W1997",                     # 使用不建议的方法
    "W1998",                     # 使用不建议的方法
    "W1999",                     # 使用不建议的方法
    "W2000",                     # 使用不建议的方法
    "W2001",                     # 使用不建议的方法
    "W2002",                     # 使用不建议的方法
    "W2003",                     # 使用不建议的方法
    "W2004",                     # 使用不建议的方法
    "W2005",                     # 使用不建议的方法
    "W2006",                     # 使用不建议的方法
    "W2007",                     # 使用不建议的方法
    "W2008",                     # 使用不建议的方法
    "W2009",                     # 使用不建议的方法
    "W2010",                     # 使用不建议的方法
    "W2011",                     # 使用不建议的方法
    "W2012",                     # 使用不建议的方法
    "W2013",                     # 使用不建议的方法
    "W2014",                     # 使用不建议的方法
    "W2015",                     # 使用不建议的方法
    "W2016",                     # 使用不建议的方法
    "W2017",                     # 使用不建议的方法
    "W2018",                     # 使用不建议的方法
    "W2019",                     # 使用不建议的方法
    "W2020",                     # 使用不建议的方法
    "W2021",                     # 使用不建议的方法
    "W2022",                     # 使用不建议的方法
    "W2023",                     # 使用不建议的方法
    "W2024",                     # 使用不建议的方法
    "W2025",                     # 使用不建议的方法
    "W2026",                     # 使用不建议的方法
    "W2027",                     # 使用不建议的方法
    "W2028",                     # 使用不建议的方法
    "W2029",                     # 使用不建议的方法
    "W2030",                     # 使用不建议的方法
    "W2031",                     # 使用不建议的方法
    "W2032",                     # 使用不建议的方法
    "W2033",                     # 使用不建议的方法
    "W2034",                     # 使用不建议的方法
    "W2035",                     # 使用不建议的方法
    "W2036",                     # 使用不建议的方法
    "W2037",                     # 使用不建议的方法
    "W2038",                     # 使用不建议的方法
    "W2039",                     # 使用不建议的方法
    "W2040",                     # 使用不建议的方法
    "W2041",                     # 使用不建议的方法
    "W2042",                     # 使用不建议的方法
    "W2043",                     # 使用不建议的方法
    "W2044",                     # 使用不建议的方法
    "W2045",                     # 使用不建议的方法
    "W2046",                     # 使用不建议的方法
    "W2047",                     # 使用不建议的方法
    "W2048",                     # 使用不建议的方法
    "W2049",                     # 使用不建议的方法
    "W2050",                     # 使用不建议的方法
    "W2051",                     # 使用不建议的方法
    "W2052",                     # 使用不建议的方法
    "W2053",                     # 使用不建议的方法
    "W2054",                     # 使用不建议的方法
    "W2055",                     # 使用不建议的方法
    "W2056",                     # 使用不建议的方法
    "W2057",                     # 使用不建议的方法
    "W2058",                     # 使用不建议的方法
    "W2059",                     # 使用不建议的方法
    "W2060",                     # 使用不建议的方法
    "W2061",                     # 使用不建议的方法
    "W2062",                     # 使用不建议的方法
    "W2063",                     # 使用不建议的方法
    "W2064",                     # 使用不建议的方法
    "W2065",                     # 使用不建议的方法
    "W2066",                     # 使用不建议的方法
    "W2067",                     # 使用不建议的方法
    "W2068",                     # 使用不建议的方法
    "W2069",                     # 使用不建议的方法
    "W2070",                     # 使用不建议的方法
    "W2071",                     # 使用不建议的方法
    "W2072",                     # 使用不建议的方法
    "W2073",                     # 使用不建议的方法
    "W2074",                     # 使用不建议的方法
    "W2075",                     # 使用不建议的方法
    "W2076",                     # 使用不建议的方法
    "W2077",                     # 使用不建议的方法
    "W2078",                     # 使用不建议的方法
    "W2079",                     # 使用不建议的方法
    "W2080",                     # 使用不建议的方法
    "W2081",                     # 使用不建议的方法
    "W2082",                     # 使用不建议的方法
    "W2083",                     # 使用不建议的方法
    "W2084",                     # 使用不建议的方法
    "W2085",                     # 使用不建议的方法
    "W2086",                     # 使用不建议的方法
    "W2087",                     # 使用不建议的方法
    "W2088",                     # 使用不建议的方法
    "W2089",                     # 使用不建议的方法
    "W2090",                     # 使用不建议的方法
    "W2091",                     # 使用不建议的方法
    "W2092",                     # 使用不建议的方法
    "W2093",                     # 使用不建议的方法
    "W2094",                     # 使用不建议的方法
    "W2095",                     # 使用不建议的方法
    "W2096",                     # 使用不建议的方法
    "W2097",                     # 使用不建议的方法
    "W2098",                     # 使用不建议的方法
    "W2099",                     # 使用不建议的方法
    "W2100",                     # 使用不建议的方法
    "W2101",                     # 使用不建议的方法
    "W2102",                     # 使用不建议的方法
    "W2103",                     # 使用不建议的方法
    "W2104",                     # 使用不建议的方法
    "W2105",                     # 使用不建议的方法
    "W2106",                     # 使用不建议的方法
    "W2107",                     # 使用不建议的方法
    "W2108",                     # 使用不建议的方法
    "W2109",                     # 使用不建议的方法
    "W2110",                     # 使用不建议的方法
    "W2111",                     # 使用不建议的方法
    "W2112",                     # 使用不建议的方法
    "W2113",                     # 使用不建议的方法
    "W2114",                     # 使用不建议的方法
    "W2115",                     # 使用不建议的方法
    "W2116",                     # 使用不建议的方法
    "W2117",                     # 使用不建议的方法
    "W2118",                     # 使用不建议的方法
    "W2119",                     # 使用不建议的方法
    "W2120",                     # 使用不建议的方法
    "W2121",                     # 使用不建议的方法
    "W2122",                     # 使用不建议的方法
    "W2123",                     # 使用不建议的方法
    "W2124",                     # 使用不建议的方法
    "W2125",                     # 使用不建议的方法
    "W2126",                     # 使用不建议的方法
    "W2127",                     # 使用不建议的方法
    "W2128",                     # 使用不建议的方法
    "W2129",                     # 使用不建议的方法
    "W2130",                     # 使用不建议的方法
    "W2131",                     # 使用不建议的方法
    "W2132",                     # 使用不建议的方法
    "W2133",                     # 使用不建议的方法
    "W2134",                     # 使用不建议的方法
    "W2135",                     # 使用不建议的方法
    "W2136",                     # 使用不建议的方法
    "W2137",                     # 使用不建议的方法
    "W2138",                     # 使用不建议的方法
    "W2139",                     # 使用不建议的方法
    "W2140",                     # 使用不建议的方法
    "W2141",                     # 使用不建议的方法
    "W2142",                     # 使用不建议的方法
    "W2143",                     # 使用不建议的方法
    "W2144",                     # 使用不建议的方法
    "W2145",                     # 使用不建议的方法
    "W2146",                     # 使用不建议的方法
    "W2147",                     # 使用不建议的方法
    "W2148",                     # 使用不建议的方法
    "W2149",                     # 使用不建议的方法
    "W2150",                     # 使用不建议的方法
    "W2151",                     # 使用不建议的方法
    "W2152",                     # 使用不建议的方法
    "W2153",                     # 使用不加法
]

# 测试代码的设计复杂度阈值（更宽松）
[tool.pylint.tests_design]
max-args = 15
max-locals = 25
max-returns = 10
max-branches = 20
max-statements = 100

# 测试代码的格式配置
[tool.pylint.tests_format]
max-line-length = 120
max-module-lines = 2000

[tool.bandit]
exclude_dirs = ["tests", "test_*", "*_test.py"]
skips = ["B101", "B601"]

[tool.benchmark]
min_rounds = 5
min_time = 0.005
max_time = 1.0
histogram = true
save_data = true
json_file = "benchmark_results.json"
